--- a/static/store/styles/_navbar.scss
+++ b/static/store/styles/_navbar.scss
@@ -33,6 +33,19 @@
     padding: 1rem 0;
     display: flex;
 
+    ul.dropdown-menu {
+      background-color: $background;
+      color: $text-color;
+
+      li .dropdown-item {
+        color: $text-color;
+
+        &:hover {
+          color: $background;
+        }
+      }
+    }
+
     ul.dropdown-menu.avatar-dropdown {
       margin-left: -110px !important;
     }
@@ -156,7 +169,7 @@
     }
 
     div {
-      color: $background;
+      color: $text-color;
       background-color: inherit;
       transition: inherit;
     }
