--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="{% static 'images/favicon.png' %}" rel="icon" type="image/x-icon">
 
     <link rel="stylesheet" href="{% static 'base/styles/base.css' %}">
     {% block styles %}{% endblock %}
