--- a/static/store/styles/_product_reviews.scss
+++ b/static/store/styles/_product_reviews.scss
@@ -52,7 +52,7 @@
     .review {
       margin-top: 1.4rem;
       min-height: 10rem;
-      background: $background-lighter;
+      background: $background-light;
       border: 1px solid $border-color;
       border-radius: 5px;
       position: relative;
