--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -17,10 +17,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#what-we-do">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Store</a>
+            <a class="nav-link" href="{% url 'store:filter_products' 'all' %}">Store</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact Us</a>
