migrated to postgres

--- a/static/core/styles/core.css
+++ b/static/core/styles/core.css
@@ -222,6 +222,21 @@ section .subtext {
     width: 100% !important;
   }
 }
+@media screen and (max-height: 300px) {
+  #home p {
+    top: 75% !important;
+  }
+}
+@media screen and (max-height: 512px) {
+  #home p {
+    top: 60%;
+  }
+}
+@media screen and (max-height: 768px) {
+  #home p {
+    top: 50%;
+  }
+}
 @keyframes slide_in_title {
   0% {
     margin-top: -30px;
