--- a/static/store/styles/_vars.scss
+++ b/static/store/styles/_vars.scss
@@ -1,22 +1,22 @@
-// $background: #ffffff;
-$background: #222222;
-// $background-light: #ececec;
-$background-light: #454545;
-// $background-lighter: #f3f3f3;
-$background-lighter: #666666;
+$background: #ffffff;
+// $background: #222222;
+$background-light: #ececec;
+// $background-light: #454545;
+$background-lighter: #f3f3f3;
+// $background-lighter: #666666;
 $background-alt: #1966af;
 $background-alt-hover: #185792;
-// $text-color: #000000;
-$text-color: white;
+$text-color: black;
+// $text-color: white;
 $text-color-light: #b5b5b5;
 $text-color-alt: #1966af;
 $text-color-alt-hover: #17436c;
-// $text-color-disabled: #696969;
-$text-color-disabled: #c1c1c1;
-// $text-color-mute: #2f4f4f;
-$text-color-mute: #d1d1d1;
-// $text-color-mute-hover: #777e7e;
-$text-color-mute-hover: #bbbbbb;
+$text-color-disabled: #696969;
+// $text-color-disabled: #c1c1c1;
+$text-color-mute: #2f4f4f;
+// $text-color-mute: #d1d1d1;
+$text-color-mute-hover: #777e7e;
+// $text-color-mute-hover: #bbbbbb;
 $border-color: #b5b5b5;
 
 $color-primary: #0d6efd;
