--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -22,9 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'store:filter_products' 'all' %}">Store</a>
           </li>
-          <li class="nav-item">
+          {% comment %} <li class="nav-item">
             <a class="nav-link" href="#">Contact Us</a>
-          </li>
+          </li> {% endcomment %}
         </ul>
       </div>
     </div>
