--- a/templates/store/product_layout.html
+++ b/templates/store/product_layout.html
@@ -51,7 +51,7 @@
             </div>
             <div class="check-availability-wrapper">
               <a href="#" onclick="alert('This product is available!');" class="btn btn-success">
-                <i class="fa-solid fa-boxes-stacked pe-2"></i>Check availability in store
+                <i class="fa-solid fa-boxes-stacked pe-2"></i>Check availability
               </a>
             </div>
 
