--- a/static/store/styles/_navbar.scss
+++ b/static/store/styles/_navbar.scss
@@ -33,19 +33,6 @@
     padding: 1rem 0;
     display: flex;
 
-    ul.dropdown-menu {
-      background-color: $background;
-      color: $text-color;
-
-      li .dropdown-item {
-        color: $text-color;
-
-        &:hover {
-          color: $background;
-        }
-      }
-    }
-
     ul.dropdown-menu.avatar-dropdown {
       margin-left: -110px !important;
     }
@@ -153,7 +140,7 @@
   display: flex;
   height: 100% !important;
 
-  div {
+  a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,55 +151,21 @@
     width: fit-content;
     transition: background-color 150ms;
     height: 100%;
+    color: $background;
+    text-decoration: none;
     
     &:hover {
       background-color: $background-alt-hover;
     }
 
-    a {
-      color: $text-color;
+    div {
+      color: $background;
       background-color: inherit;
       transition: inherit;
       text-decoration: none;
     }
   }
 }
-
-// .breadcrumbs-container {
-//   background-color: $background;
-//   height: 2rem;
-//   justify-content: center;
-//   align-items: center;
-
-//   .breadcrumbs-wrapper {
-//     display: flex;
-//     margin-top: 0.25rem;
-
-//     .breadcrumbs-content {
-//       display: inline-flex;
-//       color: $text-color-light;
-//       height: 100%;
-//       font-weight: 600;
-//       font-size: 15px;
-    
-//       .breadcrumbs-link {
-//         padding: 0 0.8rem;
-//         color: $text-color-alt;
-//         text-decoration: none;
-//         transition: color 150ms;
-      
-//         &:hover {
-//           color: $text-color-alt-hover;
-//         }
-//       }
-      
-//       .breadcrumbs-text {
-//         color: $text-color-disabled;
-//         padding-left: 10px;
-//       }
-//     }
-//   }
-// }
 
 .content {
   padding: 3rem;
