--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,25 @@
     <link href="{% static 'images/favicon.png' %}" rel="icon" type="image/x-icon">
 
     <link rel="stylesheet" href="{% static 'base/styles/base.css' %}">
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.4/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyBjdCUXUHpITg8SJ6JF67FkPZn0r0fDH_8",
+        authDomain: "the-best-guys-ipt.firebaseapp.com",
+        projectId: "the-best-guys-ipt",
+        storageBucket: "the-best-guys-ipt.appspot.com",
+        messagingSenderId: "963614080264",
+        appId: "1:963614080264:web:f3a226e11ac2182eb340bd"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
     {% block styles %}{% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
