--- a/templates/store/filter_products.html
+++ b/templates/store/filter_products.html
@@ -17,6 +17,8 @@
         All products
       {% elif filter_type == 'category' %}
         All {{ filter.name }}
+      {% elif filter_type == 'search' %}
+        Search results
       {% else %}
         Internal error!
       {% endif %}
@@ -33,6 +35,8 @@
           <p class="card-price">${{ product.price|intcomma }}</p>
           <a href="{% url 'store:product_details' product.slug %}" class="btn btn-primary">View Details</a>
         </div>
+      {% empty %}
+        <h3 class="ms-3">No results found</h3>
       {% endfor %}
     </div>
   </div>
